mType/tests/testFiles/import/error/importMissingPath.mt
// Test: Missing file path after 'from'
@Script
import { SomeClass } from

var obj = SomeClass();
